# AutoClaude

./: .env.example  .gitignore  README.md  init_prompt.md  pyproject.toml
hooks/: devlog-guard.sh
orchestrator/: README.md  __main__.py  cost_governor.py  file_watcher.py  git_manager.py  readiness_check.py  scheduler.py  state_store.py  task_runner.py  telegram_bot.py
templates/: CLAUDE.md.template  ci.yml.template  cloudbuild.yaml.template  deploy.yml.template  service.yaml.template
tests/: test_git_manager.py  test_main.py  test_readiness_check.py  test_scheduler.py  test_state_store.py  test_task_runner.py  test_telegram_bot.py
